# PETSIRDUseCaseTemplate

./: .gitmodules  README.md  environment.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
python/: README.md  start.py
